Fix CSS issues on Safari

--- a/styles/cube.css
+++ b/styles/cube.css
@@ -27,7 +27,9 @@
 }
 
 .cube svg {
+  height: 100%;
   pointer-events: none;
+  width: 100%;
 }
 
 .cube path {
