--- a/styles/filters.css
+++ b/styles/filters.css
@@ -44,6 +44,7 @@ fieldset {
   display: flex;
   flex-direction: row;
   justify-content: start;
+  align-items: start;
 }
 
 fieldset legend {
